@@ -9,6 +9,7 @@ Version 1.7.9+svn:
    * Fix bug #14865: move+attack into hex with ambusher causes crash.
    * Shorter "Initializing Display" phase when staying in same campaign/MP.
    * Optimize AI recruitement and movement phases.
+   * Add hotkey support for gui2
 
 Version 1.7.9-beta2:
  * AI:
